# tripletex-mcp-multi-company

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  pyproject.toml
agent_docs/: mcp_tripletex.md
auth/: __init__.py  tripletex.py
mcp/: tripletex_server.py
scripts/: smoke.ps1
src/tripletex_mcp_multi/: __init__.py  __main__.py  client.py  server.py  tripletex.py
